Initially make the design icon description not visible to ensure jquery toggle functionality between the icon and description works

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,6 @@
 .whatwedo {
 font-family: 'PT Sans Narrow', sans-serif;
 }
+.designdescription {
+  display: none;
+}
